plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'
description = 'discodeit'

// (JDK 21 환경에서도 17 버전으로 결과물을 만듦)
sourceCompatibility = '17'
targetCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// 1. 일반 jar 파일 생성을 방지 (껍데기 생성 방지)
jar {
    enabled = false
}

// 2. 실행 가능한 jar 파일의 이름을 고정 (Railway가 찾기 쉽게 함)
bootJar {
    enabled = true
    archiveFileName = 'app.jar'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger (springdoc-openapi) 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // JPA 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Lombok과 MapStruct의 연동을 도와주는 바인딩
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}
